# ecs_bench_suite

./: Cargo.toml  output.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  perf.data  readme.md
benches/: benchmarks.rs
src/: lib.rs
src/bevy/: frag_iter_200.rs  frag_iter_2000.rs  frag_iter_20_padding_10.rs  heavy_compute.rs  mod.rs
src/ellecs/: add_remove.rs  frag_iter.rs  frag_iter_200.rs  frag_iter_2000.rs  frag_iter_20_padding_10.rs  get.rs  heavy_compute.rs  mod.rs  simple_insert.rs  simple_iter.rs
src/hecs/: frag_iter_200.rs  frag_iter_2000.rs  frag_iter_20_padding_10.rs  get.rs  mod.rs
src/legion/: frag_iter_200.rs  frag_iter_2000.rs  frag_iter_20_padding_10.rs  mod.rs
src/shipyard/: add_remove.rs  frag_iter.rs  frag_iter_200.rs  frag_iter_2000.rs  heavy_compute.rs  mod.rs  simple_iter.rs
src/shipyard_packed/: mod.rs
