[package]
name = "ecs_bench_suite"
version = "0.1.0"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.17", feature = ["serde"] }
bincode = "1.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3"
bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
#bevy_ecs = { path = "../bevy_cart/crates/bevy_ecs" }
hecs = { git = "https://github.com/Ralith/hecs" }
shipyard = { git = "https://github.com/leudz/shipyard" }
specs = {version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
ellecs = { path = "../Ellecs" }
criterion = "0.3"

[dev-dependencies]
rayon = "1.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = true
opt-level = 3
lto = "thin"